--- a/style.css
+++ b/style.css
@@ -33,20 +33,22 @@ body {
 .perfil{
     margin: 0 auto;
     margin-top:10px;
-    animation: flota 3s linear infinite
+    animation: flota 240s linear infinite
 }
 
 @keyframes flota{
     0%,100%{
         transform: translateY(0px);
+        transform: rotateZ(0deg);
     }
     50%{
         transform: translateY(15px);
+        transform: rotateZ(3600deg);
     }
 }
 
 h4{
-    margin-top: 10px;
+    margin-top: 30px;
     font-weight:100;
     font-size: 25px;
 }
