--- a/style.css
+++ b/style.css
@@ -51,9 +51,11 @@ h4{
     margin-top: 30px;
     font-weight:100;
     font-size: 25px;
+    overflow-y: hidden !important;
 }
 .span{
     margin-top: -30px;
+    overflow-y: hidden !important;
 }
 
 .menu-center{
@@ -120,6 +122,7 @@ h1{
     text-align: start;
     margin-top: 10px;
     margin-left: 40px;
+    
 }
 .span2{
     margin-left:2.5%;
@@ -150,10 +153,10 @@ h2{
     border: 1px solid blue;
     width:95%;
     margin: 0 auto;
-    padding: 10px;
+    
 }
 .svg{
-    margin: 5% 5%;
+    
     margin-left:110px;
     padding: 10px;
 }
@@ -220,6 +223,7 @@ button{
     color:#08fdd8;
     cursor: pointer;
     margin-left: 54%;
+    overflow-y: hidden !important;
 }
 
 button:hover{
@@ -232,6 +236,7 @@ h3{
     margin: 0 auto;
     margin-bottom:20px;
     font-size:40px;
+    overflow-y: hidden !important;
 }
 
 
